[package]
name = "drill"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
drill-b1 = { alias = "b1", problem = "https://atcoder.jp/contests/drill/tasks/drill_b1" }
drill-b2 = { alias = "b2", problem = "https://atcoder.jp/contests/drill/tasks/drill_b2" }
drill-b3 = { alias = "b3", problem = "https://atcoder.jp/contests/drill/tasks/drill_b3" }
drill-b4 = { alias = "b4", problem = "https://atcoder.jp/contests/drill/tasks/drill_b4" }
drill-b5 = { alias = "b5", problem = "https://atcoder.jp/contests/drill/tasks/drill_b5" }
drill-b6 = { alias = "b6", problem = "https://atcoder.jp/contests/drill/tasks/drill_b6" }
drill-b7 = { alias = "b7", problem = "https://atcoder.jp/contests/drill/tasks/drill_b7" }
drill-b8 = { alias = "b8", problem = "https://atcoder.jp/contests/drill/tasks/drill_b8" }
drill-b9 = { alias = "b9", problem = "https://atcoder.jp/contests/drill/tasks/drill_b9" }
drill-b10 = { alias = "b10", problem = "https://atcoder.jp/contests/drill/tasks/drill_b10" }
drill-b11 = { alias = "b11", problem = "https://atcoder.jp/contests/drill/tasks/drill_b11" }
drill-b12 = { alias = "b12", problem = "https://atcoder.jp/contests/drill/tasks/drill_b12" }
drill-b13 = { alias = "b13", problem = "https://atcoder.jp/contests/drill/tasks/drill_b13" }
drill-b14 = { alias = "b14", problem = "https://atcoder.jp/contests/drill/tasks/drill_b14" }
drill-b15 = { alias = "b15", problem = "https://atcoder.jp/contests/drill/tasks/drill_b15" }
drill-b16 = { alias = "b16", problem = "https://atcoder.jp/contests/drill/tasks/drill_b16" }
drill-b17 = { alias = "b17", problem = "https://atcoder.jp/contests/drill/tasks/drill_b17" }
drill-b18 = { alias = "b18", problem = "https://atcoder.jp/contests/drill/tasks/drill_b18" }

[[bin]]
name = "drill-b1"
path = "src/bin/b1.rs"

[[bin]]
name = "drill-b2"
path = "src/bin/b2.rs"

[[bin]]
name = "drill-b3"
path = "src/bin/b3.rs"

[[bin]]
name = "drill-b4"
path = "src/bin/b4.rs"

[[bin]]
name = "drill-b5"
path = "src/bin/b5.rs"

[[bin]]
name = "drill-b6"
path = "src/bin/b6.rs"

[[bin]]
name = "drill-b7"
path = "src/bin/b7.rs"

[[bin]]
name = "drill-b8"
path = "src/bin/b8.rs"

[[bin]]
name = "drill-b9"
path = "src/bin/b9.rs"

[[bin]]
name = "drill-b10"
path = "src/bin/b10.rs"

[[bin]]
name = "drill-b11"
path = "src/bin/b11.rs"

[[bin]]
name = "drill-b12"
path = "src/bin/b12.rs"

[[bin]]
name = "drill-b13"
path = "src/bin/b13.rs"

[[bin]]
name = "drill-b14"
path = "src/bin/b14.rs"

[[bin]]
name = "drill-b15"
path = "src/bin/b15.rs"

[[bin]]
name = "drill-b16"
path = "src/bin/b16.rs"

[[bin]]
name = "drill-b17"
path = "src/bin/b17.rs"

[[bin]]
name = "drill-b18"
path = "src/bin/b18.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
itertools = "=0.12.1"
ac-library-rs = "=0.1.1"
num = "=0.4.3"
num-integer = "=0.1.46"
num-traits = "=0.2.19"
rand = "=0.8.5"
rand_chacha = "=0.3.1"
regex = "=1.10.4"
petgraph = "=0.6.5"
indexmap = "=2.2.6"
ordered-float = "=4.2.0"
rustc-hash = "=1.1.0"
smallvec = "=1.13.2"
fixedbitset = "=0.5.7"
superslice = "=1.0.0"
maplit = "=1.0.2"
bstr = "=1.9.1"

[dev-dependencies]
